<?xml version="1.0"?>
<package>
  <name>tams_turtlebot_bringup</name>
  <version>0.0.0</version>
  <description>The tams_turtlebot_bringup package</description>

  <maintainer email="demo@todo.todo">demo</maintainer>
  <author email="5jonetzk@informatik.uni-hamburg.de">Yannick Jonetzko</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>

