<?xml version="1.0"?>
<package>
  <name>tams_turtlebot_server</name>
  <version>0.0.0</version>
  <description>Multimaster server for the 4 turtlebots in the laboratory</description>

  <maintainer email="project2015@todo.todo">project2015</maintainer>
  <author email="5jonetzk@informatik.uni-hamburg.de">Yannick Jonetzko</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
